# llamafarm

./: .cursorrules  .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  README.md  claude.md  install.sh  llamafarm-contributing.md  llamafarm-github-workflow.txt  llamafarm-plant-command.ts  llamafarm-plugin-setup.sh  llamafarm-quickstart.md
config/: __init__.py  compile_schema.py  config_types.py  datamodel.py  demo_type_generation.py  example.py  generate_types.py  loader.py  pyproject.toml  schema.yaml  test_config.py
config/helpers/: generator.py  loader.py
config/schemas/: default.yaml
config/tests/: __init__.py  conftest.py  run_tests.py  test_config_loader.py  test_config_writer.py  test_edge_cases.py  test_integration.py
designer/llama-brain/: INTEGRATION_GUIDE.md  README.md  SETUP.md  SYSTEM_OVERVIEW.md  bootstrap.py  bootstrap.sh  demo.py  demo_integration.py  pyproject.toml  run_demo.sh  setup.py  test_system.py
designer/llama-brain/configs/: llama_brain_models.yaml  llama_brain_prompts.yaml  llama_brain_rag.yaml  simple_qa_pipeline.yaml
designer/llama-brain/data/chat/: 1d0251da-6550-45d4-b3d2-bdc9df7f45c8.json  (+7 more)
designer/llama-brain/llama_brain/: __init__.py  main.py
designer/llama-brain/test-chat-app/: app.py
models/: README.md  cli.py  default_strategies.yaml  image_strategies.yaml  pyproject.toml  schema.yaml  setup_and_demo.sh  test_demo.py  test_finetuned_model.py  test_image_detection.py  unified_schema.yaml  vision_cli.md
models/cli/: __init__.py  progress.py
models/components/: __init__.py  base.py  factory.py  setup_manager.py
models/components/converters/: gguf_converter.py  ollama_converter.py
models/components/image_recognizers/: __init__.py
models/config/: default.json  hf_models.json  real_models_example.json  test_config.json  use_case_examples.json
models/core/: image_strategy_manager.py  model_manager.py  strategy_manager.py
models/core/cli/: __init__.py  image_commands.py
models/demos/: DEMO_VERIFICATION_REPORT.md  README.md  RUN_IMAGE_DEMO.md  TRAINING_SUMMARY.md  chat_with_real_model.py  chat_with_strategy_model.py  demo1_cloud_fallback.py  demo1_cloud_with_fallback.py  demo2_multi_model.py  demo2_multi_model_cloud.py  demo3_quick_training.py  demo3_training.py  demo4_complex_training.py  demo_4_vision_simple.py  demo_llamafactory.py  demo_medical_ai.py  demo_pytorch.py  run_all_demos.py  setup_and_demo.sh  simple_real_chat.py  strategies.yaml  train_with_fixed_strategy.py
models/demos/demos/: sample_medical_dataset.jsonl
models/demos/strategies/: creative_lora_diverse.yaml  medical_qlora_efficient.yaml  python_coding_specialist.yaml  technical_qlora_large.yaml
models/docs/: CLI.md  ENHANCEMENTS.md  FIXED_CONFIGURATION.md  IMAGE_RECOGNITION_GUIDE.md  IMAGE_RECOGNITION_MVP_PLAN.md  PYTORCH_TRAINING_GUIDE.md  REAL_FINETUNING_DEMO.md  SETUP.md  STRATEGIES.md  STRATEGY_EXAMPLES.md  TRAINING_OVERVIEW.md
models/example_strategies/: README.md  local_inference_engines.yaml  test_loading.py  validate_strategies.py
models/fine_tuning/: __init__.py  default.yaml  schema.yaml  strategies.yaml
models/fine_tuning/core/: __init__.py  base.py  factory.py  strategies.py
models/fine_tuning/data/: __init__.py  processors.py
models/fine_tuning/tests/: __init__.py  test_base.py  test_factory.py  test_strategies.py
models/fine_tuning/trainers/: __init__.py  llamafactory_trainer.py  pytorch_trainer.py
models/medical-llama3.2/: Modelfile
models/medical-llama3.2-optimized/: Modelfile
models/medical-tinyllama/: Modelfile
models/strategies/: api_first_cost_optimized.yaml  budget_local_optimized.yaml  domain_specialist_finetuning.yaml  hybrid_cloud_local.yaml  local_first_privacy.yaml  performance_enterprise.yaml  performance_optimized_throughput.yaml  research_experimentation.yaml  startup_budget_conscious.yaml
models/tests/: run_integration_tests.py  test_cli_mock.py  test_components.py  test_example_strategies.py  test_image_cli.py  test_image_recognizers.py  test_integration.py  test_simple.py
models/tests/test_strategies/: fine_tuning_workflows.yaml
prompts/: README.md  STRUCTURE.md  default-prompts.yaml  default_strategies.yaml  generate_config.py  pyproject.toml  schema.yaml  setup.py  setup_and_demo.sh  validate_uv_setup.py
prompts/config/: default_prompts.json
prompts/demos/: README.md  demo-strategies.yaml  demo1_simple_qa.py  demo2_customer_support.py  demo3_code_assistant.py  demo4_rag_research.py  demo5_advanced_reasoning.py  demo_helper.py  master_demo.py  quick_start.py  run_all_demos.py
prompts/examples/: code-review.yaml  customer-service.yaml  data-analysis.yaml
prompts/prompts/: README.md  __init__.py  __main__.py  cli.py
prompts/prompts/core/: __init__.py  template_registry.py
prompts/prompts/frameworks/: __init__.py
prompts/prompts/models/: template.py
prompts/prompts/utils/: __init__.py  template_loader.py
prompts/schemas/: strategies.json  templates.json
prompts/strategies/: README.md  __init__.py  config.py  loader.py  manager.py
prompts/strategies/examples/: README.md  content_moderation.yaml  creative_workshop.yaml  data_analysis.yaml  educational_tutor.yaml  financial_advisor.yaml  health_wellness.yaml  language_learning.yaml  product_assistant.yaml  software_architect.yaml  travel_planner.yaml
prompts/templates/advanced/: ab_testing.json  chain_of_thought.json  comparative_analysis.json
prompts/templates/agentic/: agent_coordinator.json  agent_reflection.json  tool_execution.json  tool_planning.json  tool_selection.json  workflow_orchestration.json
prompts/templates/basic/: qa_basic.json  qa_detailed.json  summarization.json
prompts/templates/chat/: assistant_basic.json
prompts/templates/domain_specific/: code_analysis.json  llm_judge.json  medical_qa.json  prompt_evaluation.json  rag_evaluation.json  response_scoring.json
prompts/templates/few_shot/: few_shot_classification.json
prompts/tests/: test_cli_strategy.py.disabled  test_cli_strategy_simple.py  test_prompt_system.py  test_strategies.py  test_template_structure.py
(+442 files in other folders)
